--- a/src/app/ui/components/home/home.component.html
+++ b/src/app/ui/components/home/home.component.html
@@ -32,13 +32,16 @@
 </section>
 
 <section class="categories">
-  
-  <div class="category-header"*ngIf="!isMobile">MAIN CATEGORIES</div>
-  <div class="container">
+  <div class="category-header" *ngIf="!isMobile">MAIN CATEGORIES</div>
+  <div class="category-container"> <!-- container -> category-container -->
+    <button class="scroll-btn left" (click)="scrollCategories('left')">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><polyline points="15 18 9 12 15 6"></polyline></svg>
+    </button>
+    
     <div class="category-grid" #categoryGrid>
       <div class="category-card" *ngFor="let category of mainCategories" [routerLink]="['/'+category.id]">
         <div class="category-image">
-          <img [src]="category.categoryImage?.url" [alt]="category.name">
+          <img src="../../../../assets/icons/category/ecommerce-default-category.png" [alt]="category.name">
         </div>
         <div class="category-content">
           <h3 class="category-title">{{ category.name }}</h3>
@@ -46,6 +49,10 @@
         </div>
       </div>
     </div>
+    
+    <button class="scroll-btn right" (click)="scrollCategories('right')">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><polyline points="9 18 15 12 9 6"></polyline></svg>
+    </button>
   </div>
 </section>
 
@@ -83,7 +90,7 @@
 </section>
 
 <section class="info-cards">
-  <div class="container">
+  <div class="info-container">
     <div class="card-grid">
       <div class="info-card">
         <div class="card-image">
