--- a/src/app/ui/components/product/ui-product-list/ui-product-list.component.scss
+++ b/src/app/ui/components/product/ui-product-list/ui-product-list.component.scss
@@ -36,12 +36,12 @@
 }
 
 // Responsive adjustments
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .product-list {
     .row > div {
       width: 50%;
-      max-width: 50%;
-      flex: 0 0 50%;
+      max-width: (100% / 3);
+      flex: 0 0 100%;
     }
   }
 }
@@ -49,8 +49,8 @@
 @media (max-width: 576px) {
   .product-list {
     .row > div {
-      width: 100%;
-      max-width: 100%;
+      width: 50%;
+      max-width: 50%;
       flex: 0 0 100%;
     }
     
