--- a/src/app/ui/components/home/home.component.html
+++ b/src/app/ui/components/home/home.component.html
@@ -44,7 +44,7 @@
     <div class="category-grid" #categoryGrid>
       <div class="category-card" *ngFor="let category of mainCategories" [routerLink]="['/'+category.id]">
         <div class="category-image">
-          <img src="../../../../assets/icons/category/ecommerce-default-category.png" [alt]="category.name">
+          <img [src]="category.categoryImage?.url" [alt]="category.name">
         </div>
         <div class="category-content">
           <h3 class="category-title">{{ category.name }}</h3>
